# noDMC-DSA-Tutorial

./: .gitignore  .gitmodules  Dockerfile  README.md  docker_build.sh  docker_start.sh  setup_DML.sh
code/: CMakeLists.txt  memcpy_example.c  memcpy_example.cpp
code/config/: 3g2e_vary_prio.conf  8n1d1e1w.conf  load-dsaconfig.sh
code/util/: dml_helper.hpp
